<resources>
    <string name="app_name">PushNotification</string>
    <string name="push_to_all">Push to All</string>
    <string name="push_to_user">Push to User</string>
    <string name="detail_push_user">Detail Push User</string>
    <string name="phone">Phone</string>
    <string name="emulator">Emulator</string>
    <string name="your_message">Your message</string>
    <string name="send_push">Send Push</string>
    <string name="sender_to">Send To:</string>
    <string name="last_sender">Last Sender:</string>
    <string name="new_message">New message received</string>
    <string name="channel_id">Push Channel</string>
    <string name="channel_name">push_channel_name</string>
    <string name="channel_description">This is notification channel for PushNotification App</string>
    <string name="notification_title">New Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
