<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/linear_layout"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_sender"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/sender_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:layout_margin="8dp"
            android:textSize="16dp"/>

        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_black_24dp"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/text_view_border"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:scrollbars="none">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="#111111"
            android:textSize="16dp"
            android:lineSpacingExtra="2dp"/>

    </ScrollView>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_margin="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_message"
            android:gravity="top"
            android:textSize="16dp"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender_to"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="16dp"/>

        <android.support.design.chip.Chip
            android:id="@+id/phone_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:text="@string/phone"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="16dp"
            android:checked="true"/>

        <android.support.design.chip.Chip
            android:id="@+id/emulator_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:text="@string/emulator"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="16dp"
            android:checked="true"/>

    </LinearLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_push"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:layout_margin="8dp"/>

</LinearLayout>